manifests/apps/talos/grafana/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik-system
    sectionName: websecure
  hostnames:
  - "graphs.bigli.io"
  rules:
  - backendRefs:
    - name: grafana
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route-redirect
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik-system
    sectionName: web
  hostnames:
  - "graphs.bigli.io"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
